# MAI_OS_Labs

./: .gitignore  README.md
.devcontainer/: devcontainer.json
01/: CMakeLists.txt  main.cpp  numbers.txt
01/include/: os.hpp  sys_calls.hpp
01/src/: child.cpp  os.cpp  parent.cpp  sys_calls.cpp
